# proiectpcd

./: CMakeLists.txt  build.sh
include/: connection.h  constants.h  error_handling.h  error_log.h  handle_admin.h  handle_client.h  log.h  tcp.h  unix.h  variables.h
logs/: log_20240612_194332.txt  log_20240612_194357.txt  log_20240612_194402.txt  log_20240612_194445.txt  log_20240612_205528.txt  log_20240612_210401.txt  log_20240612_210619.txt  log_20240612_211014.txt  log_20240612_211117.txt  log_20240612_211215.txt  log_20240612_211251.txt  log_20240612_211343.txt  log_20240612_211429.txt  log_20240612_211713.txt  log_20240612_211852.txt  log_20240612_211935.txt  log_20240612_212021.txt  log_20240612_212118.txt  log_20240612_212242.txt  log_20240612_212425.txt  log_20240612_212609.txt  log_20240612_212812.txt  log_20240612_213130.txt  log_20240612_213421.txt  log_20240612_213500.txt  log_20240612_213603.txt  log_20240612_213720.txt  log_20240612_220131.txt  log_20240612_220306.txt  log_20240612_220959.txt  log_20240612_221151.txt  log_20240612_222334.txt  log_20240612_222432.txt  log_20240612_222532.txt  log_20240612_222642.txt  log_20240612_222706.txt  log_20240612_222741.txt
src/: log_20240612_194126.txt
src/admin/: admin.c
src/client/: client.c
src/common/: error_handling.c  error_log.c
src/server/: connection.c  handle_admin.c  handle_client.c  log.c  server.c  tcp.c  unix.c
